--- a/greenly/src/app/components/footer/footer.component.html
+++ b/greenly/src/app/components/footer/footer.component.html
@@ -43,16 +43,16 @@
     <div class="col-md-4 right-content">
       <h2 class="fs-5">Connect</h2>
       <div class="d-flex justify-content-center align-items-center">
-        <div>
+        <div class="cursor-pointer">
           <img src="./assets/Social Icons-1.png" alt="">
         </div>
-        <div>
+        <div class="cursor-pointer">
           <img src="./assets/Social Icons.png" alt="">
         </div>
-        <div>
+        <div class="cursor-pointer">
           <img src="./assets/Social Icons-3.png" alt="">
         </div>
-        <div>
+        <div class="cursor-pointer">
           <img src="./assets/X.png" alt="">
         </div>
       </div>
@@ -61,7 +61,7 @@
           <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
           </span>
-          <span class="button-text">Get Started</span>
+          <span class="button-text" routerLink="/app/system/shop">Get Started</span>
         </button>
       </div>
     </div>
