--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -7,11 +7,8 @@
                         <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
                             <h2 class="slider-text text-white special-font">
                                 Protect the beauty of nature</h2>
-                            <p class="w-50 mx-auto">Reconnect with the
-                                beauty of nature and recognize its essential place in our lives. Together, let's
-                                cherish,
-                                protect, and nurture the natural world so its wonders can flourish for generations to
-                                come.
+                            <p class="w-50 mx-auto">Support clean choices and eco-actions to keep nature thriving and
+                                beautiful.
                             </p>
                         </div>
                         <img src="./assets/hero-image.png" alt="Slide 1" class="w-100" />
@@ -19,12 +16,10 @@
                     <ng-template carouselSlide class="position-relative">
                         <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
                             <h2 class="slider-text text-white special-font">
-                                Protect the beauty of nature</h2>
+                                Embrace Eco-Friendly Living</h2>
                             <p class="w-50 mx-auto">Reconnect with the
-                                beauty of nature and recognize its essential place in our lives. Together, let's
-                                cherish,
-                                protect, and nurture the natural world so its wonders can flourish for generations to
-                                come.
+                                Make simple changes—reuse, recycle, and reduce waste—to help protect our
+                                planet every day.
                             </p>
                         </div>
                         <img src="./assets/roy-luthfi-dhayugantara-D-oAUO46-9c-unsplash.jpg" alt="Slide 1"
@@ -33,12 +28,10 @@
                     <ng-template carouselSlide class="position-relative">
                         <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
                             <h2 class="slider-text text-white special-font">
-                                Protect the beauty of nature</h2>
-                            <p class="w-50 mx-auto">Reconnect with the
-                                beauty of nature and recognize its essential place in our lives. Together, let's
-                                cherish,
-                                protect, and nurture the natural world so its wonders can flourish for generations to
-                                come.
+                                Sustain the Earth’s Future
+                            </h2>
+                            <p class="w-50 mx-auto">Support green choices and clean habits to preserve
+                                nature for tomorrow.
                             </p>
                         </div>
                         <img src="./assets/walter-martin-CCbZ-DYDWiY-unsplash.jpg" alt="Slide 1" class="w-100" />
@@ -57,15 +50,18 @@
             <div class="col-md-6 d-flex align-items-center" data-aos="fade-right">
                 <div class="cards">
                     <div class="my-container">
-                        <div data-text="Blog" style="--r:-15;" class="glass cursor-pointer">
+                        <div data-text="Blog" style="--r:-15;" class="glass cursor-pointer"
+                            routerLink="/app/system/blog">
                             <div class="mb-3">
                                 <img src="./assets/message-square-svgrepo-com.svg" width="50px" height="50px"
                                     alt="Blog Icon" />
                             </div>
-                            <p>We support beekeepers with efficient tools and practices that promote responsible apiary
-                                growth, healthier pollinators, and sustainability in agriculture and nature.</p>
+                            <p>We provide a space to share your thoughts, engage in meaningful discussions, and connect
+                                with others—promoting awareness, inspiration, and a deeper connection to environmental
+                                and sustainable living topics.</p>
                         </div>
-                        <div data-text="Agricultural Loans" style="--r:5;" class="glass cursor-pointer">
+                        <div data-text="Agricultural Loans" style="--r:5;" class="glass cursor-pointer"
+                            routerLink="/app/system/loan">
                             <div class="mb-3">
                                 <img src="./assets/farmer-working-svgrepo-com.svg" width="50px" height="50px"
                                     alt="Blog Icon" />
@@ -73,7 +69,8 @@
                             <p>We lead change with smart solutions that accelerate electric vehicle adoption, fostering
                                 a cleaner environment and a more sustainable future of transport.</p>
                         </div>
-                        <div data-text="Apiary Licences" style="--r:25;" class="glass cursor-pointer">
+                        <div data-text="Apiary Licences" style="--r:25;" class="glass cursor-pointer"
+                            routerLink="/app/system/apiary-licence">
                             <div class="mb-3">
                                 <img src="./assets/honey-svgrepo-com.svg" width="50px" height="50px" alt="Blog Icon" />
                             </div>
@@ -86,7 +83,8 @@
             <div class="col-md-6">
                 <div class="wrapper">
                     <div class="my-inner" style="--quantity: 6;">
-                        <div class="card cursor-pointer" style="--index: 0;--color-card: 142, 252, 157;">
+                        <div class="card cursor-pointer" style="--index: 0;--color-card: 142, 252, 157;"
+                            routerLink="/app/system/general-info">
                             <div>
                                 <span class="small special-font">Recycling</span>
                             </div>
@@ -94,16 +92,17 @@
                                 <img src="./assets/recycling-svgrepo-com.svg" class="w-100 h-100" alt="slider-img">
                             </div>
                         </div>
-                        <div class="card cursor-pointer" style="--index: 1;--color-card: 142, 252, 157;">
+                        <div class="card cursor-pointer" style="--index: 1;--color-card: 142, 252, 157;"
+                            routerLink="/app/system/loan">
                             <div>
-                                <span class="small special-font">Factories</span>
+                                <span class="small special-font">Loans</span>
                             </div>
                             <div class="img">
-                                <img src="./assets/factory-pollution-svgrepo-com.svg" class="w-100 h-100"
-                                    alt="slider-img">
+                                <img src="./assets/loan-svgrepo-com.svg" class="w-100 h-100" alt="slider-img">
                             </div>
                         </div>
-                        <div class="card cursor-pointer" style="--index: 2;--color-card: 142, 252, 157;">
+                        <div class="card cursor-pointer" style="--index: 2;--color-card: 142, 252, 157;"
+                            routerLink="/app/system/shop">
                             <div>
                                 <span class="small special-font">Agricultural</span>
                             </div>
@@ -112,29 +111,30 @@
                                     alt="slider-img">
                             </div>
                         </div>
-                        <div class="card cursor-pointer" style="--index: 3;--color-card: 142, 252, 157;">
+                        <div class="card cursor-pointer" style="--index: 3;--color-card: 142, 252, 157;"
+                            routerLink="/app/system/apiary-licence">
                             <div>
-                                <span class="small special-font">Homes</span>
+                                <span class="small special-font">Apiary Licences</span>
                             </div>
                             <div class="img">
-                                <img src="./assets/eco-home-eco-house-svgrepo-com.svg" class="w-100 h-100"
-                                    alt="slider-img">
+                                <img src="./assets/honey-svgrepo-com (1).svg" class="w-100 h-100" alt="slider-img">
                             </div>
                         </div>
-                        <div class="card cursor-pointer" style="--index: 4;--color-card: 142, 252, 157;">
+                        <div class="card cursor-pointer" style="--index: 4;--color-card: 142, 252, 157;"
+                            routerLink="/app/system/blog">
+                            <div>
+                                <span class="small special-font">Blog</span>
+                            </div>
+                            <div class="img">
+                                <img src="./assets/blog-svgrepo-com.svg" class="w-100 h-100" alt="slider-img">
+                            </div>
+                        </div>
+                        <div class="card cursor-pointer" style="--index: 5;--color-card: 142, 252, 157;" routerLink="/app/system/shop">
                             <div>
                                 <span class="small special-font">Mobility</span>
                             </div>
                             <div class="img">
                                 <img src="./assets/ecologism-cars-svgrepo-com.svg" class="w-100 h-100" alt="slider-img">
-                            </div>
-                        </div>
-                        <div class="card cursor-pointer" style="--index: 5;--color-card: 142, 252, 157;">
-                            <div>
-                                <span class="small special-font">Solar Panels</span>
-                            </div>
-                            <div class="img">
-                                <img src="./assets/solar-energy-svgrepo-com.svg" class="w-100 h-100" alt="slider-img">
                             </div>
                         </div>
                     </div>
@@ -199,9 +199,9 @@
 <section class="stats-section p-5">
     <div class="container">
         <div class="row">
-           @if(insights){
-             <div class="col-md-3">
-                <app-counter [endValue]="insights.users" label="Happy Customers"></app-counter>
+            @if(insights){
+            <div class="col-md-3">
+                <app-counter [endValue]="insights.users" label="Registered Users"></app-counter>
             </div>
             <div class="col-md-3">
                 <app-counter [endValue]="insights.approvedLicenses" label="Apiaries Licensed"></app-counter>
@@ -212,7 +212,7 @@
             <div class="col-md-3">
                 <app-counter [endValue]="insights.products" label="Different Product"></app-counter>
             </div>
-           }
+            }
         </div>
     </div>
 </section>
@@ -298,7 +298,9 @@
                     <p class="special-font about-main-text">
                         We help bring your vision of a harmonious world with nature to life.
                     </p>
-                    <p class="bottom-text">We are committed to fostering a harmonious relationship between people and nature, working toward a cleaner, healthier planet. Together, we help bring your vision of a thriving, sustainable world to life.</p>
+                    <p class="bottom-text">We are committed to fostering a harmonious relationship between people and
+                        nature, working toward a cleaner, healthier planet. Together, we help bring your vision of a
+                        thriving, sustainable world to life.</p>
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center">
