--- a/greenly/src/app/components/manage-specific-licence/manage-specific-licence.component.html
+++ b/greenly/src/app/components/manage-specific-licence/manage-specific-licence.component.html
@@ -57,7 +57,7 @@
             </div>
 
             <h4 class="special-font text-main position-relative fs-5">Required Documents</h4>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-md-6 mb-3">
                     <label class="form-label special-font fs-4">National ID / Passport</label>
                     <a [href]="licenceDetails.nationalId" target="_blank"
@@ -72,7 +72,7 @@
                         Open Experience Documents
                     </a>
                 </div>
-            </div> -->
+            </div>
         </form>
 
         @if (licenceDetails.status === "pending") {
