--- a/greenly/src/app/components/reset-password/reset-password.component.html
+++ b/greenly/src/app/components/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
                         <input [ngClass]="{
                             'is-valid' : !recoveryForm.get('password')?.errors && (recoveryForm.get('password')?.touched || recoveryForm.get('password')?.dirty ),
                             'is-invalid' : recoveryForm.get('password')?.errors && (recoveryForm.get('password')?.touched || recoveryForm.get('password')?.dirty )
-                        }" type="password" class="mb-3 form-control" id="password" placeholder="name@example.com"
+                        }" type="password" class="mb-3 form-control" id="password" placeholder="*********"
                             formControlName="password">
                             @if (recoveryForm.get("password")?.errors && recoveryForm.get("password")?.touched) {
                                 <div class="alert alert-warning p-2 fs-6 fw-bold rounded-2 mt-2">
@@ -18,14 +18,14 @@
                                 </div>
                             }
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input  type="password" class="mb-3 form-control" id="confirmPassword" placeholder="name@example.com"
+                        <input  type="password" class="mb-3 form-control" id="confirmPassword" placeholder="*********"
                             formControlName="confirmPassword">
                             @if (recoveryForm.getError("missMatch") && recoveryForm.get("confirmPassword")?.touched) {
                                 <div class="alert alert-warning p-2 fs-6 fw-bold rounded-2 mt-2">
                                     <p class="m-0">Passwords don't match</p>
                                 </div>  
                             }
-                        <button class="btn btn-success rounded-4 d-block w-100">Update</button>
+                        <button class="btn btn-success rounded-4 d-block w-100" [disabled]="recoveryForm.invalid">Update</button>
                     </div>
                 </form>
             </div>
