home admin modified

--- a/greenly/src/app/components/add-sub-category/add-sub-category.component.html
+++ b/greenly/src/app/components/add-sub-category/add-sub-category.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="container my-3">
-    <h1 class="special-font text-center">Add Category</h1>
+    <h1 class="special-font text-center">Add Sub Category</h1>
 
     <form [formGroup]="addSubCategoryForm" class="form" (ngSubmit)="onSubmit()">
       <div class="row mt-4 justify-content-center">
