--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -26,6 +26,17 @@
         </div>
       </div>
 
+      <!-- Adding -->
+      <div class="col-md-12 col-sm-6 col-10">
+        <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="/admin/adding">
+          <div class="mb-4 icon-box bg-success-subtle d-flex align-items-center justify-content-center rounded-circle mx-auto">
+            <img src="./assets/add-svgrepo-com.svg" alt="Licence Icon" width="60px" height="60px">
+          </div>
+          <h3 class="special-font fs-4 mt-3">Add</h3>
+          <p class="text-muted mt-2">Add Products / Categories / Sub Categories.</p>
+        </div>
+      </div>
+
       <!-- Manage Products -->
       <div class="col-md-4 col-sm-6 col-10">
         <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="/admin/edit-product">
