--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -129,7 +129,8 @@
                                 <img src="./assets/blog-svgrepo-com.svg" class="w-100 h-100" alt="slider-img">
                             </div>
                         </div>
-                        <div class="card cursor-pointer" style="--index: 5;--color-card: 142, 252, 157;" routerLink="/app/system/shop">
+                        <div class="card cursor-pointer" style="--index: 5;--color-card: 142, 252, 157;"
+                            routerLink="/app/system/shop">
                             <div>
                                 <span class="small special-font">Mobility</span>
                             </div>
@@ -154,13 +155,14 @@
             <div class="col-md-4 container-2">
                 <div class="card cursor-pointer">
                     <div class="imgBx">
-                        <img src="./assets/blue-water-9-inch-activated-carbon-filter.jpg" alt="nike-air-shoe">
+                        <img src="./assets/blue-water-9-inch-activated-carbon-filter.jpg" alt="hepa filters">
                     </div>
 
                     <div class="contentBx">
 
                         <h2>Activated Carbon Filter</h2>
-                        <a class="cursor-pointer">Buy Now</a>
+                        <a class="cursor-pointer"
+                            [routerLink]="['/app/system/product-details',  '684b5a4fd386473be7e76b95']">Buy Now</a>
                     </div>
 
                 </div>
@@ -169,12 +171,14 @@
                 <div class="card cursor-pointer">
                     <div class="imgBx">
                         <img src="./assets/images.png" alt="nike-air-shoe" class="w-50">
+
                     </div>
 
                     <div class="contentBx">
 
-                        <h2>Electric Scooter</h2>
-                        <a class="cursor-pointer">Buy Now</a>
+                        <h2>Electric Scooter Inboard Glider</h2>
+                        <a class="cursor-pointer"
+                            [routerLink]="['/app/system/product-details',  '684e071bdb3184c7a646f510']">Buy Now</a>
                     </div>
 
                 </div>
@@ -183,12 +187,14 @@
                 <div class="card cursor-pointer">
                     <div class="imgBx">
                         <img src="./assets/bike.png" alt="nike-air-shoe" class="w-75">
+
                     </div>
 
                     <div class="contentBx">
 
-                        <h2>Electric Bike</h2>
-                        <a class="cursor-pointer">Buy Now</a>
+                        <h2>Electric Bike Shengmilo MX02S</h2>
+                        <a class="cursor-pointer"
+                            [routerLink]="['/app/system/product-details',  '684e068cdb3184c7a646f504']">Buy Now</a>
                     </div>
 
                 </div>
